--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background: #0d0d0d;
-        color: #e0e0e0;
+        background: var(--bg-primary, #282828);
+        color: var(--text-primary, #ebdbb2);
       }
     </style>
   </head>
