#12: Let's use Fira Mono

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#0d0d0d" />
     <title>Kern</title>
 
-    <!-- JetBrains Mono Font - using CDN fallback, local font preferred -->
+    <!-- Fira Mono Font - using CDN fallback, local font preferred -->
     <link rel="preconnect" href="https://fonts.bunny.net" crossorigin />
-    <link href="https://fonts.bunny.net/css?family=jetbrains-mono:400,500" rel="stylesheet" />
+    <link href="https://fonts.bunny.net/css?family=fira-mono:400,500" rel="stylesheet" />
 
     <style>
       /* Critical CSS - prevent FOUC */
